@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py26, py27, py32, py33, py34, py35, py36, pypy, pypy3, jython
+envlist = py26, py27, py34, py35, py36, pypy, pypy3, jython
 skipsdist = True
 skip_missing_interpreters = True
 
