@@ -1,6 +1,13 @@
 Changelog
 =========
 
+UNRELEASED
+----------
+
+Changes:
+
+* Remove support for EOL Python 2.6 and 3.3.
+
 2.4.0 (2018-04-10)
 ------------------
 
